Fix tooltip hover area being 1px too short

--- a/client/src/styles/_tooltip.scss
+++ b/client/src/styles/_tooltip.scss
@@ -19,7 +19,7 @@
   z-index: 1;
 
   &__hover-area {
-    bottom: calc(-0.5em - 1px);
+    bottom: calc(-0.5em - 2px);
     left: -1px;
     position: absolute;
     right: -1px;
